2008-05-05  Mike Frysinger  <vapier@gentoo.org>

   * src/svf/svf.c: Fix __MINGW32__ typo.
   * src/flash/amd.c: Remove _() around part names.
   * src/flash/amd_flash.c: Likewise.
   * src/lib/safe-ctype.c: Include from libiberty as it is needed on some
     non-POSIX ports (like mingw).
   * src/cmd/include.c (cmd_include_or_script_run): Add handling of absolute
     paths under Windows that take the form <letter>:\.
   * sysdep.h, src/flash/amd.c, src/flash/amd_flash.c, src/jtag.c: Move some
     Windows stub functions to sysdep.h so we don't have to redeclare them in
     every single file and so we don't trigger future bitrot.

2008-05-04  Mike Frysinger  <vapier@gentoo.org>

   * src/flash/amd.c: Handle chipid 0x22ed M29W640DT.

2008-05-02  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/cable/generic_usbconn.c (generic_usbconn_connect):
     fix user_specified.driver comparison

2008-05-01  Mike Frysinger  <vapier@gentoo.org>

   * configure.ac: Check for libusb before libftdi since the latter needs
     the former.
   * configure.ac: Use AC_PATH_TOOL() instead of AC_PATH_PROG() so that we
     handle cross-compiling sanely.
   * configure.ac: Make LIBS/CPPFLAGS sane and consistent when checking for
     libusb and libftdi.
   * configure.ac: Use POSIX compliant tests for equality ("=", not "==").

2008-04-26  Kolja Waschk <kawk>

   * src/flash/amd.c: Separate Chip name by Manufacturer (Andrey F. Ilchuk)

2008-04-24  Mike Frysinger  <vapier@gentoo.org>

   * src/tap/usbconn/libusb.c (usbconn_libusb_connect): Use the
     usb_get_busses() function rather than the usb_busses global
     variable due to portability issues (like with libusb-win32).
   * src/jtag.c (jtag_readline_loop): [ 1950315 ] Fix quiting when
     using the non readline version.
   * configure.ac: [ 1950061 ] Look for the ChangeLog in $srcdir.

2008-04-19  Kolja Waschk <kawk>

   * src/tap/parport/ftd2xx.c: SetBaudRate to 3E6, not 48E6. Should