@@ -45,7 +45,8 @@ dnl
 dnl
 dnl @version 1.1
 dnl @author Ville Laurikari <vl@iki.fi>
-dnl
+dnl @author Ville Voipio <vv@iki.fi>; check for readline completion (not available in, e.g. Leopard)
+
 AC_DEFUN([VL_LIB_READLINE], [
   AC_CACHE_CHECK([for a readline compatible library],
                  vl_cv_lib_readline, [
@@ -78,16 +79,23 @@ AC_DEFUN([VL_LIB_READLINE], [
               [Define if you have a readline compatible library])
     AC_CHECK_HEADERS(readline.h readline/readline.h)
     AC_CACHE_CHECK([whether readline supports history],
-                   vl_cv_lib_readline_history, [
-      vl_cv_lib_readline_history="no"
-      AC_TRY_LINK_FUNC(add_history, vl_cv_lib_readline_history="yes")
-    ])
+                   vl_cv_lib_readline_history, 
+                   [vl_cv_lib_readline_history="no"
+                    AC_TRY_LINK_FUNC(add_history, vl_cv_lib_readline_history="yes")])
     if test "$vl_cv_lib_readline_history" = "yes"; then
-      AC_DEFINE(HAVE_READLINE_HISTORY, 1,
-                [Define if your readline library has \`add_history'])
+      AC_DEFINE(HAVE_READLINE_HISTORY, 1, [Define if your readline library has \`add_history'])
       AC_CHECK_HEADERS(history.h readline/history.h)
     fi
+
+    AC_CACHE_CHECK([whether readline supports completion],
+                   vl_cv_lib_readline_completion, 
+                   [vl_cv_lib_readline_completion="no"
+                    AC_TRY_LINK_FUNC(rl_completion_matches, vl_cv_lib_readline_completion="yes")])
+    if test "$vl_cv_lib_readline_completion" = "yes"; then
+      AC_DEFINE(HAVE_READLINE_COMPLETION, 1, [Define if your readline library has \`rl_completion_matches'])
+    fi
   fi
+
 ])dnl
 
 # ACI_PROG_SED
